// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Node fork - happy 1`] = `
"<svg height=\\"50\\" width=\\"200\\" xmlns=\\"http://www.w3.org/2000/svg\\">
  <rect fill=\\"green\\" x=\\"0\\" y=\\"0\\" width=\\"200\\" height=\\"50\\"></rect>
  <text x=\\"100\\" y=\\"25\\" fill=\\"pink\\" text-anchor=\\"middle\\" alignment-baseline=\\"central\\">  project: aHR0cDovL25vZGVmb3JraGFwcHkuc2VydmVybGVzcy5zb2NpYWwv</text>
</svg>"
`;

exports[`Node fork - happy 2`] = `"<a href=\\"https://opendesign.network/node/aHR0cDovL25vZGVmb3JraGFwcHkuc2VydmVybGVzcy5zb2NpYWwv\\" /><img src=\\"https://api.opendesign.network/node/aHR0cDovL25vZGVmb3JraGFwcHkuc2VydmVybGVzcy5zb2NpYWwv/pixel?prev=123\\" /></a>"`;

exports[`Node verify - Happy 1`] = `
"<svg height=\\"50\\" width=\\"200\\" xmlns=\\"http://www.w3.org/2000/svg\\">
  <rect fill=\\"green\\" x=\\"0\\" y=\\"0\\" width=\\"200\\" height=\\"50\\"></rect>
  <text x=\\"100\\" y=\\"25\\" fill=\\"pink\\" text-anchor=\\"middle\\" alignment-baseline=\\"central\\">  project: aHR0cDovL25vZGV2ZXJpZnloYXBweS5zZXJ2ZXJsZXNzLnNvY2lhbC8=</text>
</svg>"
`;

exports[`Node verify - Happy 2`] = `"<a href=\\"https://opendesign.network/node/aHR0cDovL25vZGV2ZXJpZnloYXBweS5zZXJ2ZXJsZXNzLnNvY2lhbC8=\\" /><img src=\\"https://api.opendesign.network/node/aHR0cDovL25vZGV2ZXJpZnloYXBweS5zZXJ2ZXJsZXNzLnNvY2lhbC8=/pixel\\" /></a>"`;
